--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -11,24 +11,35 @@ html
 		script(src='/public/libs/Semantic-UI-1.11.4/semantic.min.js')
 
 	body
-		header
+		include header.jade
 		div.wrapper
-			div.ui.segment
+			div.ui.orange.segment
 				h2.ui.header
 					i.tree.icon
-					div.content 請遵守網路禮儀
-						div.sub.header
-							| 若有惡意操作或散播不雅言語，本站將會將您的帳號禁止訪問並且公佈 ID。
-				h2.ui.header
-					i.tree.icon
-					div.content 如何開始？
+					div.content 如何開始協助翻譯
 						div.sub.header
 							| 您可以選擇主動提交翻譯內容，亦或是在其他玩家已提交的翻譯中，選出你最中意、最符合本國語言習慣的句子即可。
 				h2.ui.header
 					i.tree.icon
-					div.content 翻譯注意事項
+					div.content 請遵守網路禮儀
 						div.sub.header
-							| 在原文句子中會見到 {nl} 的文字，在實際遊戲會轉為「換行 new line」。請您在翻譯時保留 {nl} 出現在合適的位置，只要符合本國語言習慣換行是您可以自由控制刪減的。
+							| 若有惡意操作或散播不雅言語，本站將會將您的帳號禁止訪問、移除所有資訊並且公佈 ID。
+				h2.ui.header
+					i.tree.icon
+					div.content 翻譯注意事項（一）
+						div.sub.header
+							| 在原文句子中會見到 
+							div.ui.orange.label {nl}
+							|  的文字，在實際遊戲會轉為「換行 new line」。請您在翻譯時保留 
+							div.ui.orange.label {nl}
+							|  出現在合適的位置，只要符合本國語言習慣換行是您可以自由控制刪減的。
+				h2.ui.header
+					i.tree.icon
+					div.content 翻譯注意事項（二）
+						div.sub.header
+							| 在原文句子中會見到如 
+							div.ui.orange.label {img xxx 40 40}
+							|  等文字，在實際遊戲會轉為「圖像 icon」。請您在翻譯時保留其出現在合適的位置。
 			div.ui.blue.segment.tableBinder
 				div.ui.three.column.stackable.grid
 					div.center.aligned.column
@@ -74,6 +85,7 @@ html
 									i.add.circle.icon
 		include footer.jade
 		script.
+			// window.location.pathname = "hello.com";
 			// Random image for header screenshot.
 			$('header').css('background-image', 'url(/public/images/screenshots/' + Math.floor(Math.random() * 5 + 1) + '.jpg)');
 			// Semantic-UI Checkbox default value using session storage.
@@ -113,3 +125,5 @@ html
 					sessionStorage[group] = 'off';
 				}
 			});
+			// Ban the all drag event.
+			$('img').on('dragstart', function (event) { event.preventDefault(); });
