Fixed  problem about the modal button duplicately trigger.

--- a/server/views/guide.jade
+++ b/server/views/guide.jade
@@ -1,7 +1,7 @@
 div.ui.orange.segment
 	div.ui.two.column.stackable.grid
 		div.center.aligned.column
-			button.ui.large.orange.fluid.button(onclick="console.log($('#guideBook')); $('#guideBook').modal('show');") 翻譯注意事項
+			button.ui.large.orange.fluid.button(onclick="$('#guideBook').modal('show');") 翻譯注意事項
 		div.center.aligned.column
 			button.ui.large.orange.fluid.button 目前整體進度
 div#guideBook.ui.modal
