--- a/server/public/style.css
+++ b/server/public/style.css
@@ -116,6 +116,12 @@ footer .content > .header {
 	font-size: 1.75em;
 }
 
+footer .license {
+	color: rgba(110, 110, 110, 0.85);
+	text-align: center;
+	padding: 0px 15px;
+}
+
 footer .author {
 	padding: 10px 0px 30px 0px;
 }
