--- a/server/views/guide.jade
+++ b/server/views/guide.jade
@@ -18,15 +18,10 @@ div#guideBook.ui.modal
 				i.tree.icon
 				div.content 如何開始協助翻譯
 					div.sub.header
-						| 您可以選擇主動提交翻譯內容，亦或是在其他玩家已提交的翻譯中，選出你最中意、最符合本國語言習慣的句子即可。
+						| 您可以選擇主動提交翻譯內容，亦或是在其他玩家已提交的翻譯中，評選出你最中意、最符合本國語言習慣的句子即可。
 			h2.ui.header
 				i.tree.icon
-				div.content 請遵守網路禮儀
-					div.sub.header
-						| 若有惡意操作或散播不雅言語，本站將會將您的帳號禁止訪問、移除所有資訊並且公佈 ID。
-			h2.ui.header
-				i.tree.icon
-				div.content 翻譯注意事項（一）
+				div.content 換行、斷句
 					div.sub.header
 						| 在原文句子中會見到 
 						div.ui.orange.label {nl}
@@ -35,15 +30,20 @@ div#guideBook.ui.modal
 						|  出現在合適的位置，只要符合本國語言習慣，換行是您可以自由控制刪減的。
 			h2.ui.header
 				i.tree.icon
-				div.content 翻譯注意事項（二）
+				div.content 保留圖像字詞
 					div.sub.header
 						| 在原文句子中會見到如 
 						div.ui.orange.label {img xxx 40 40}
 						|  等文字，在實際遊戲會轉為「圖像 icon」。請您在翻譯時保留其出現在合適的位置。
 			h2.ui.header
 				i.tree.icon
-				div.content 翻譯注意事項（三）
+				div.content 標點符號
 					div.sub.header
 						| 由於標點符號有半形全形之分。除特殊情況外，主要請以 
 						div.ui.orange.label ，。？、：；「」『』（）
 						|  作為本次翻譯的標準依據。
+			h2.ui.header
+				i.tree.icon
+				div.content 請遵守網路禮儀
+					div.sub.header
+						| 若有惡意操作或散播不雅言語，本站將會將您的帳號禁止訪問、移除所有資訊並且公佈 ID。
