--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -19,7 +19,7 @@ html
 				div.ui.two.column.stackable.grid
 					div.ten.wide.center.aligned.column
 						div.ui.blue.segment
-							if user
+							if user !== 'GUEST'
 								h2.ui.center.aligned.header
 									img.ui.circular.image(src='http://graph.facebook.com/' + user.id + '/picture?type=square')
 									div.content 您好呀，#{user.name}
@@ -69,19 +69,19 @@ html
 								th.two.wide.center.aligned 當前第三
 								th.one.wide.collapsing.center.aligned 展開全部
 						tbody
-							each languages, code in baseData
+							each types, code in baseData
 								tr
 									td.left.aligned #{code}
-									each conversation in languages
+									each conversation in types.originals
 										if conversation !== ''
-											td
-												div #{conversation}
+											td #{conversation}
 										else
-											td.disabled
-												div 暫無資料
-									td -
-									td -
-									td -
+											td.disabled.center.aligned 暫無資料
+									each translation in types.translations
+										if translation.conversation !== ''
+											td #{translation.conversation}
+										else
+											td.disabled.center.aligned 從缺
 									td.center.aligned.cursor.pointer(onclick="detailConversation('" + code + "');")
 										button.ui.circular.icon.green.button.margin.reset
 											i.add.icon
