--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -60,9 +60,9 @@ html
 						thead
 							tr
 								th.one.wide.collapsing.center.aligned(rowspan='2', data-group='code') 編號
-								th.four.wide.center.aligned(rowspan='2', data-group='korean') 韓文（Korean）
-								th.four.wide.center.aligned(rowspan='2', data-group='english') 英語（English）
-								th.seven.wide.center.aligned(colspan='4') 正體中文（Chinese Traditional）
+								th.two.wide.center.aligned(rowspan='2', data-group='korean') 韓文（Korean）
+								th.two.wide.center.aligned(rowspan='2', data-group='english') 英語（English）
+								th.eleven.wide.center.aligned(colspan='4') 正體中文（Chinese Traditional）
 							tr
 								th.two.wide.center.aligned 當前第一
 								th.two.wide.center.aligned 當前第二
@@ -71,14 +71,14 @@ html
 						tbody
 							each types, code in baseData
 								tr
-									td.left.aligned #{code}
+									td.left.aligned.break.all #{code}
 									each conversation in types.originals
 										if conversation !== ''
 											td #{conversation}
 										else
 											td.disabled.center.aligned 暫無資料
 									each translation in types.translations
-										if translation.conversation !== ''
+										if translation.conversation
 											td #{translation.conversation}
 										else
 											td.disabled.center.aligned 從缺
