--- a/server/views/detail.jade
+++ b/server/views/detail.jade
@@ -46,20 +46,20 @@ div.ui.fullscreen.modal.detailConversation
 									a.avatar
 										img(src='http://graph.facebook.com/' + translation[0] + '/picture?type=square')
 									div.content
-										div.metadata
+										div.like
 											span.assentients 獲得 #{translation[1].assentients.length} 
 												i.thumbs.outline.up.icon
 										div.text
 											div.conversation #{translation[1].conversation}
 								div.likeContainer
-									button.ui.blue.fluid.button
+									button.ui.blue.fluid.button(onclick="likeTranslation('" + code + "', '" + translation[0] + "');")
 										i.thumbs.outline.up.icon
 										| 投他一票！
 							div.ui.divider
 	div.actions
 		if user === 'GUEST'
 			a(href='login')
-				button.ui.facebook.button
+				button.ui.facebook.button(onclick="$('.tableContainer').addClass('loading');")
 					i.facebook.icon
 					| 登入 Facebook 開始協助翻譯
 		else if ! everTranslated
@@ -87,31 +87,7 @@ div.ui.modal.submitTranslation
 				div.field
 					textarea(name='translation')
 	div.actions
-		button.ui.green.button(onclick="submitTranslation('" + code + "');")
+		button.ui.green.button(onclick="writeTranslation('" + code + "');")
 			i.send.icon
 			| 確定送出
 		div.ui.button 關閉視窗
-script.
-	// Submit the form.
-	function submitTranslation(code) {
-		ajaxSubmitTranslation(code, function (data) {
-			console.log(data);
-		});
-	}
-	function ajaxSubmitTranslation(code, callback) {
-		$.ajax(
-			{
-				url     : '/conversation/' + code + '/translation',
-				type    : 'POST',
-				data    : $('form.translationFrom').serialize(),
-				error   : function () {
-					var data = { type: 'ERR_TIMEOUT' };
-					callback(data);
-				},
-				success : function (data) {
-					callback(data);
-				},
-				timeout : 5000
-			}
-		);
-	}
