--- a/server/views/detail.jade
+++ b/server/views/detail.jade
@@ -35,7 +35,8 @@ div.ui.fullscreen.modal.detailConversation
 						else
 							div.ui.statistic
 								div.label 目前無任何翻譯
-								div.value :(
+								div.value
+									i.smile.icon
 								div.label 快來協助翻譯吧
 					div.ui.comments
 						div.ui.horizontal.divider
