--- a/server/public/style.css
+++ b/server/public/style.css
@@ -95,6 +95,16 @@ body > .wrapper > .container {
 	}
 }
 
+.functionContainer button {
+	letter-spacing: 0.2em;
+	line-height: 1.3em !important;
+}
+
+.advanceContainer {
+	z-index: 4;
+	padding: 10px 0px;
+}
+
 .tableContainer {
 	margin-bottom: 100px !important;
 }
